[wangjie]提交顾客管理表格

--- a/pages/guke/guke.html
+++ b/pages/guke/guke.html
@@ -1,8 +1,241 @@
-<style></style>
+<style>
+	.button{
+		cursor: pointer;     /*光标悬浮有手型*/
+		margin-bottom: 7px;
+	}
+	.zuo{
+		display: inline-block;   /*强制变成行内块级元素*/
+		background-color: #4aca6d;
+		color: #fff;
+		padding: .3em 1.2em;
+		border-radius: 3px;
+		margin-right:.7em;	
+	}
+	.z{
+		display: inline-block;   
+		background-color: #008742;
+		color: #fff;
+		padding: .3em 1.2em;
+		border-radius: 3px;
+		margin-right:.7em;
+	}
+	.r{
+		display: inline-block; 
+		background-color: #024221;
+		color: #fff;
+		padding: .3em 1.2em;
+		border-radius: 3px;
+	}
+	table.table{
+		box-sizing: border-box;
+		width: 100%;
+		border-collapse: collapse;  /*边框折叠*/
+	}
+	table.table td,
+	table.table th{
+		border:1px solid #ccc;
+		line-height: 2em;
+		text-align: center;
+	}
+	table.table tr.current {
+		background-color: #ededed;
+	}
+	.none{
+		display: none;
+	}
+</style>
+<div class="button">
+	<div class="zuo" id="btn_add">添加</div>
+	<div class="z">批量导入</div>
+	<div class="r" >批量删除</div>
+</div>
+<div class="forms">
+	<form action="javascript:void(0)">
+	<input type="hidden" name="id">
+		<table>
+			<tbody>
+				<tr>
+					<td>姓名</td>
+					<td><input type="text" name = "realname"></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>手机号</td>
+					<td><input type="text" name = "telephone"></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td><input type="submit" value="保存"></td>
+				</tr>
+			</tbody>
+		</table>
+	</form>
+</div>
+	<table class="table">
+		<thead>
+			<tr>
+				<th width="100px">编号</th>
+				<th width="300px">姓名</th>
+				<th>头像</th>
+				<th>手机</th>
+				<th width="150px">操作</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr class="none">
+				<td><input type="checkbox"></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td>
+					<a class = "btn_del" href="javascript:void(0)">删除</a>
+					<a class = "btn_upd" href="javascript:void(0)">修改</a>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+
 <script>
-	
+  var btn_add = document.getElementById("btn_add");
+		var tbody = document.getElementsByTagName("tbody")[1];
+		var baseURL = "http://134.175.154.93:6677"
+
+		document.forms[0].onsubmit = function(event){
+			// 1. 校验有效性
+			// 2. 获取有效值
+			var realname = document.querySelector("input[name=realname]").value;
+			var telephone = document.querySelector("input[name=telephone]").value;
+			var id = document.querySelector("input[name=id]").value;
+			// 3. 与后台进行交互
+			var xhr = new XMLHttpRequest();
+			xhr.open("post",baseURL+"/customer/saveCustomerOrUpdateCustomer");
+			xhr.responseType = "json";
+			xhr.setRequestHeader('Content-Type','application/x-www-form-urlencoded')
+			var data;
+			if(id){
+				data = "id="+id+"&realname="+realname+"&telephone="+telephone
+			} else {
+				data = "realname="+realname+"&telephone="+telephone
+			}
+			xhr.send(data);
+			xhr.onreadystatechange = function(){
+				if(this.readyState === 4){
+					if(this.status === 200){
+						// 刷新数据
+						initData();
+						// 提供成功信息
+						alert(this.response.message);
+					}
+				}
+			}
+
+			event.preventDefault();
+		}
+
+		// 为删除按钮/修改按钮绑定事件处理函数
+		tbody.onclick = function(event){
+			if(event.target.nodeName === "A"){
+				switch(event.target.className){
+					case "btn_del":
+						//0. 获取当前的id
+						var id = event.target.parentNode.parentNode.children[0].children[0].value;
+
+						//1. 调用ajax删除数据库中的数据
+						var xhr = new XMLHttpRequest();
+						xhr.responseType ="json"
+						xhr.open("POST",baseURL+"/customer/deleteCustomerById");
+						xhr.setRequestHeader('Content-Type','application/x-www-form-urlencoded')
+						// id=1&name=terry&age=12
+						xhr.send("id="+id)
+						xhr.onreadystatechange = function(){
+							if(this.readyState === 4){
+								if(this.status === 200){
+									console.log(this.response);
+									if(this.response.status === 200){
+										//2. 重新查询
+										initData();
+									} else {
+										alert("删除失败");
+									}
+								}
+							}
+						}
+						break;
+					case "btn_upd":
+						// 1. 将原有的信息放到表单中
+						var id = event.target.parentNode.parentNode.children[0].children[0].value;
+						var realname = event.target.parentNode.parentNode.children[1].innerText;
+						var telephone = event.target.parentNode.parentNode.children[3].innerText;
+						document.querySelector("input[name=realname]").value = realname;
+						document.querySelector("input[name=telephone]").value = telephone;
+						document.querySelector("input[name=id]").value = id;
+
+						break;
+				}
+			}
+		}
+
+		// 鼠标放上去当前行添加背景色
+		tbody.onmouseover = function(event){
+			var target = event.target;
+			if(target.nodeName == "TD"){
+				target.parentNode.className = "current"
+			}
+		}
+		tbody.onmouseout = function(event){
+			var target = event.target;
+			if(target.nodeName == "TD"){
+				target.parentNode.className = ""
+			}
+		}
+		// 为添加按钮绑定事件处理函数 
+		btn_add.onclick = function(event){
+			document.querySelector("input[name=realname]").value = "";
+			document.querySelector("input[name=telephone]").value = "";
+			document.querySelector("input[name=id]").value = "";
+		};
+
+
+		initData();
+		// 初始化数据
+		function initData(){
+			// 通过ajax获取后台数据，然后将数据显示到表格中
+			// 1. 实例化xhr对象
+			var xhr = new XMLHttpRequest();
+			// 2. 设置请求行
+			xhr.open("get",baseURL+"/customer/findCustomerAll");
+			// 3. 设置请求头（Content-Type）
+			xhr.responseType = "json";
+			// 4. 设置请求体，并且发送
+			xhr.send()
+			// 5.监听响应
+			xhr.onreadystatechange = function(){
+				if(this.readyState === 4 ){
+					if(this.status === 200){
+						// 先将tbody中的数据清空掉
+						Array.prototype.slice.call(tbody.children,0).forEach(function(item,index){
+							if(index!== 0){
+								tbody.removeChild(item);
+							}
+						})
+						// 遍历结果，渲染数据
+						this.response.data.forEach(function(item){
+							// 产 生一个tr
+						 var newTr = tbody.firstElementChild.cloneNode(true);
+						 newTr.children[0].children[0].value = item.id;
+						 newTr.children[1].innerHTML = "<strong>"+item.realname+"</strong>";
+						 newTr.children[3].innerHTML = "<strong>"+item.telephone+"</strong>";
+						 newTr.children[2].innerHTML = "<img width='100px' src=http://134.175.154.93:8888/group1/"+item.photo+">";
+
+						 newTr.className = "";
+						 tbody.appendChild(newTr);
+
+						})
+					} else {
+						alert("接口异常");
+					}
+				} 
+			}
+		}
 </script>
 
-<div class="guke">
-	顾客管理
-</div>
