[wangjie]完善客户管理界面

--- a/pages/guke/guke.html
+++ b/pages/guke/guke.html
@@ -26,6 +26,22 @@
 		padding: .3em 1.2em;
 		border-radius: 3px;
 	}
+	.chaxun{
+		float: right;
+		color: red;
+		margin-top: 50px;
+		margin-right: 30px;
+	}
+	.chaxun input{
+		margin-left: 20px;
+		border-radius: 3px;
+	}
+	.forms table > tbody > tr:first-child > td > input{
+		border-radius: 2px;	
+	}
+	.forms table > tbody > tr:nth-child(2) > td > input{
+		border-radius: 2px;	
+	}
 	table.table{
 		box-sizing: border-box;
 		width: 100%;
@@ -55,21 +71,25 @@
 		<table>
 			<tbody>
 				<tr>
-					<td>姓名</td>
+					<td>姓名:</td>
 					<td><input type="text" name = "realname"></td>
 					<td></td>
 				</tr>
 				<tr>
-					<td>手机号</td>
+					<td>手机号:</td>
 					<td><input type="text" name = "telephone"></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td><input type="submit" value="保存"></td>
 				</tr>
+				<div class="chaxun">
+				<input type="submit" value="查询">
+				<input type="text" placeholder="请输入"></div>
 			</tbody>
 		</table>
 	</form>
+
 </div>
 	<table class="table">
 		<thead>
