--- a/pages/dingdan/dingdan.html
+++ b/pages/dingdan/dingdan.html
@@ -1,8 +1,240 @@
-<style></style>
-<script>
-	
-</script>
+<link rel="stylesheet" href="http://at.alicdn.com/t/font_1334609_vkldafsxfe.css">
+<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+
+<style>
+	.dingdan{
+		height: 100%;
+		padding: 15px 40px;
+		box-sizing: border-box;
+	}
+	.top .btn{
+		display: inline-block;
+		border: 1px solid #333;
+		padding: 5px;
+		margin-right: 10px;
+		border-radius: 5px;
+		cursor: pointer;
+	}
+	.top .search{
+		float: right;
+		position: relative;
+	}
+	.top .search > i{
+		position: absolute;
+		right: 10px;
+		top: 8px;
+	}
+	.top .search > input{
+		line-height: 2.1em;
+		padding-left: 5px;
+		width: 250px;
+		border-radius: 5px;
+	}
+
+	.table {
+		margin-top: 20px;
+		border: 1px solid #333;
+		line-height: 2em;
+		width: 100%;
+		border-collapse: collapse;
+	}
+	.table th,.table td{
+		border: 1px solid #333;
+		text-align: center;
+	}
+	.table th {
+		background-color: #ededed;
+	}
+
+	.table tr.none{
+		display: none;
+	}
+	.table tr.current{
+		background-color: lightblue;
+	}
+</style>
 
 <div class="dingdan">
-	订单管理
+	<div class="top">
+		<div class="search">
+			<i class="iconfont iconfangdajing"></i>
+			<input type="text" placeholder="请输入...">
+		</div>
+		<div class="btns">
+			<div class="btn" id="btn_del">批量删除</div>
+			<div class="btn">导出</div>
+			<div class="btn" id="btn_add">添加</div>
+		</div>
+	</div>
+		<div class="forms">
+			<form action="javascript:void(0)">
+				<table class="table">
+					<thead>
+						<tr>
+							<th><input type="checkbox"></th>
+							<th>顾客编号</th>
+							<th>地址编号</th>
+							<th>下单时间</th>
+							<th>员工编号</th>
+							<th>总计个数</th>
+							<th>操作</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr class="none">
+							<td><input type="checkbox"></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>
+								<a class="btn_del" href="javascript:void(0)">删除</a>
+								<a class="btn_detail" href="javascript:void(0)">详情</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</form>
+			<form action="javascript:void(0)">
+				<input type="hidden" name="id">
+				<table>
+					<tbody>
+						<tr>
+							<td>顾客编号</td>
+							<td><input type="text" name="customerId"></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>地址编号</td>
+							<td><input type="text" name="addressId"></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><input type="submit" value="保存"></td>
+						</tr>
+					</tbody>
+				</table>
+			</form>
+		</div>
+		
 </div>
+
+<script>
+	$(function(){
+		var tbody = document.getElementsByTagName("tbody")[0];
+		console.log(tbody);
+		var btn_add = document.getElementById("btn_add");
+
+		//鼠标放上去当前行添加背景色
+		tbody.onmouseover = function(event){
+			var target = event.target;
+			if (target.nodeName === "TD") {
+				target.parentNode.className = "current"
+	 		}
+		}
+		//鼠标移出
+		tbody.onmouseout = function(event){
+			var target = event.target;
+	 		if (target.nodeName === "TD") {
+	 			target.parentNode.className = ""
+	 		}
+		}
+
+		//添加保存按钮
+		document.forms[1].onsubmit = function(event){
+			// 1. 校验有效性
+			// 2. 获取有效值
+			var customerId = document.querySelector("input[name=customerId]").value;
+			var addressId = document.querySelector("input[name=addressId]").value;
+			//3.与后台交互
+			var url = "http://134.175.154.93:6677/order/insertOrder";
+			var data = "&customerId="+customerId+"&addressId="+addressId;
+			$.post(url,data,function(result){
+				initData();
+			});	
+			event.preventDefault();
+		}
+
+		//为删除按钮绑定事件处理函数
+		tbody.onclick = function(event){
+			if (event.target.nodeName === 'A') {
+				switch(event.target.className){
+					case "btn_del":
+						//0.获取当前的id
+						var id = event.target.parentNode.parentNode.children[0].children[0].value;
+
+						var url = "http://134.175.154.93:6677/order/deleteOrderById";
+						var data = "id="+id;
+						$.post(url,data,function(result){
+							alert(result.message);
+							initData();
+						})
+						break;
+			
+					}
+				}
+				
+			}
+
+		//insertOrder
+		// var url = "http://134.175.154.93:6677/order/insertOrder";
+		// var data = {
+		// 	// orderLines[0].number:"6",
+		// 	// orderLines[0].productId:"23",
+		// 	customerId:"1214994",
+		// 	addressId:"7"
+		// }
+		// $.post(url,data,function(response,status){
+		// 	console.log(response,status);
+		// })
+
+		//通过id查询
+		$(function(){
+		     $('i').click(function(){
+		        var sstxt = $('input').val();
+		        $("table tbody tr")
+		              .hide()
+		              .filter(":contains('"+sstxt+"')")
+		              .show();
+		     })
+
+  		})
+
+
+		//初始化数据		
+		initData();
+		function initData(){
+			var url = "http://134.175.154.93:6677/order/findAllOrder";
+			$.get(url,function(response,textStatus){
+				//先将tbody中的数据清空掉
+				Array.prototype.slice.call(tbody.children,0).forEach(function(item,index){
+					if(index!==0){
+						tbody.removeChild(item);
+					}
+				})
+				//遍历结果，渲染数据
+				response.data.forEach(function(item){
+					//产生一个新tr
+					var newTr = tbody.firstElementChild.cloneNode(true);
+
+					newTr.children[0].children[0].value = item.id;
+					newTr.children[1].innerText = item.customerId;
+					newTr.children[2].innerText = item.addressId;
+					newTr.children[3].innerText = item.orderTime;
+					newTr.children[4].innerText = item.waiterId;
+					newTr.children[5].innerText = item.total;
+
+					newTr.className = "";
+					//将一个tr追加到tbody上
+					tbody.appendChild(newTr);
+				})
+			})
+		}
+
+
+
+
+
+	})
+</script>
