zhaoshuyunis第二次修改

--- a/pages/guke/guke.html
+++ b/pages/guke/guke.html
@@ -245,7 +245,7 @@
 						 newTr.children[0].children[0].value = item.id;
 						 newTr.children[1].innerHTML = "<strong>"+item.realname+"</strong>";
 						 newTr.children[3].innerHTML = "<strong>"+item.telephone+"</strong>";
-						 newTr.children[2].innerHTML = "<img width='100px' src=http://134.175.154.93:8888/group1/"+item.photo+">";
+						 // newTr.children[2].innerHTML = "<img width='100px' src=http://134.175.154.93:8888/group1/"+item.photo+">";
 
 						 newTr.className = "";
 						 tbody.appendChild(newTr);
