--- a/pages/shangpin/shangpin.html
+++ b/pages/shangpin/shangpin.html
@@ -25,7 +25,7 @@
 					</tr>
 					<tr>
 						<td>产品价格</td>
-						<td><input type="text" name="search"></td>
+						<td><input type="text" name="price"></td>
 						<td></td>
 					</tr>
 					<tr>
@@ -60,78 +60,78 @@
 </div>
 <style>
 
-html {
-	color: #333;
-	font:normal 16px '微软雅黑','Microsoft YaHei';
-	overflow: auto;
-}
-body,ul,ol,p,h1,h2,h3 {
-	margin: 0;
-	padding: 0;
-}
-ul,ol {
-	list-style: none;
-}
-a {
-	text-decoration: none;
-	color: #333;
-}
-.btns {
-	margin-bottom: 5px;
-	margin-top: 10px;
-}
-.btn {
-	display: inline-block;
-	padding: .3em 1.2em;
-	border-radius: 3px;
-	background-color: #5b91a2;
-	color: #fff;
-	cursor :pointer;
-}
-.btn_del {
-	display: inline-block;
-	width: 35px;
-	padding: .1em 1.1em;
-	border-radius: 3px;
-	background-color: orange;
-	color: #fff;
-	cursor :pointer
-	margin-top: 5px;
-	font-size: 14px;
-}
-.btn_upd {
-	display: inline-block;
-	width: 35px;
-	padding: .1em 1.1em;
-	border-radius: 3px;
-	background-color: #5b91a2;
-	color: #fff;
-	cursor :pointer
-	margin-top: 5px;
-	font-size: 14px;
-}
-table.table {
-	box-sizing: border-box;
-	width: 100%;
-	border-collapse: collapse;
-}
-table.table td ,
-table.table th {
-	border: 1px solid #ccc;
-	line-height: 2em;
-	text-align: center;
-}
+	html {
+		color: #333;
+		font:normal 16px '微软雅黑','Microsoft YaHei';
+		overflow: auto;
+	}
+	body,ul,ol,p,h1,h2,h3 {
+		margin: 0;
+		padding: 0;
+	}
+	ul,ol {
+		list-style: none;
+	}
+	a {
+		text-decoration: none;
+		color: #333;
+	}
+	.btns {
+		margin-bottom: 5px;
+		margin-top: 10px;
+	}
+	.btn {
+		display: inline-block;
+		padding: .3em 1.2em;
+		border-radius: 3px;
+		background-color: #5b91a2;
+		color: #fff;
+		cursor :pointer;
+	}
+	.btn_del {
+		display: inline-block;
+		width: 35px;
+		padding: .1em 1.1em;
+		border-radius: 3px;
+		background-color: orange;
+		color: #fff;
+		cursor :pointer
+		margin-top: 5px;
+		font-size: 14px;
+	}
+	.btn_upd {
+		display: inline-block;
+		width: 35px;
+		padding: .1em 1.1em;
+		border-radius: 3px;
+		background-color: #5b91a2;
+		color: #fff;
+		cursor :pointer
+		margin-top: 5px;
+		font-size: 14px;
+	}
+	table.table {
+		box-sizing: border-box;
+		width: 100%;
+		border-collapse: collapse;
+	}
+	table.table td ,
+	table.table th {
+		border: 1px solid #ccc;
+		line-height: 2em;
+		text-align: center;
+	}
 
-table.table tr.current {
-	background-color: #ededed;
-}
+	table.table tr.current {
+		background-color: #ededed;
+	}
 
-.none {
-	display: none;
-}
-.shangpin > .ss {
-	text-align: right;
-}
+	.none {
+		display: none;
+	}
+	.shangpin > .ss {
+		text-align: right;
+	}
 </style>
 
 <!-- <script type="text/javascript" src="./js/me.js"></script> -->
