--- a/muban/muban.html
+++ b/muban/muban.html
@@ -26,7 +26,7 @@
 		</div>
 		<div class="right">
 			<div class="content">
-				<div class="mb_nav">主页 / 顾客管理</div>	
+				<!-- <div class="mb_nav">主页 / 顾客管理</div>	 -->
 				<div id="guke">
 					
 				</div>			
