zhaoshuyunis第四次修改

--- a/pages/shangpin/shangpin.html
+++ b/pages/shangpin/shangpin.html
@@ -14,6 +14,7 @@
 	</div>
 	
 	<div class="forms">
+		<!--  -->
 		<form action="javascript:void(0)">
 			<input type="hidden" name="id">
 			<table>
@@ -36,6 +37,7 @@
 			</table>
 		</form>
 	</div>
+	<!-- 表格 -->
 	<table class="table">
 		<thead>
 			<tr>
@@ -57,7 +59,18 @@
 			</tr>
 		</tbody>
 	</table>
+	<!-- 盒子 -->
+	<div class="boxtwo">
+		<span class="iconfont icon-hezi"><br></span>
+		<span>No Data</span>
+	</div>
+	<div class="box">
+		<span class="iconfont icon-hezi"><br></span>
+		<span>No Data</span>
+	</div>
+
 </div>
+
 <style>
 
 	html {
@@ -132,11 +145,40 @@
 	.shangpin > .ss {
 		text-align: right;
 	}
+	/*   */
+	.box {
+		display: none;
+		text-align: center;
+		margin-top: 100px;
+	}
+	.box > span:first-child{
+		font-size: 50px;
+	}
+	.box span{
+		color: #dedede;
+	}
+	/*   */
+	.boxtwo span{
+		color: #dedede;
+	}
+	.boxtwo > span:first-child{
+		font-size: 50px;
+	}
+	.boxtwo {
+		text-align: center;
+		margin-top: 100px;
+		display: block;
+	}
+
+
+
 </style>
 
 <!-- <script type="text/javascript" src="./js/me.js"></script> -->
 <!-- <script type="text/javascript" src="./js/search.js"></script> -->
+<link rel="stylesheet" href="http://at.alicdn.com/t/font_1395781_wo4pyt1750o.css">
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+
 <script>
 	$(function(){
 		var btn_add = document.getElementById("btn_add");
@@ -294,18 +336,36 @@
 								tbody.removeChild(item);
 							}
 						})
-						// 遍历结果，渲染数据
-						this.response.data.forEach(function(item){
+						// 盒子
+						if(this.response.data.length === 0){
+							document.getElementsByClassName("box")[0].className = "boxtwo";
+							// alert(1);
+						}else{
+							// 遍历结果，渲染数据
+							document.getElementsByClassName("boxtwo")[0].className = "box";
+							this.response.data.forEach(function(item){
 							// 产 生一个tr
-						 var newTr = tbody.firstElementChild.cloneNode(true);
-						 newTr.children[0].children[0].value = item.id;
-						 newTr.children[1].innerHTML = "<strong>"+item.name+"</strong>";
-						 newTr.children[2].innerHTML = "<strong>"+item.price+"</strong>";
+							 var newTr = tbody.firstElementChild.cloneNode(true);
+							 newTr.children[0].children[0].value = item.id;
+							 newTr.children[1].innerHTML = "<strong>"+item.name+"</strong>";
+							 newTr.children[2].innerHTML = "<strong>"+item.price+"</strong>";
 
-						 newTr.className = "";
-						 tbody.appendChild(newTr);
+							 newTr.className = "";
+							 tbody.appendChild(newTr);
+							});
+						}
+						// 遍历结果，渲染数据
+						// this.response.data.forEach(function(item){
+						// 	// 产 生一个tr
+						//  var newTr = tbody.firstElementChild.cloneNode(true);
+						//  newTr.children[0].children[0].value = item.id;
+						//  newTr.children[1].innerHTML = "<strong>"+item.name+"</strong>";
+						//  newTr.children[2].innerHTML = "<strong>"+item.price+"</strong>";
 
-						})
+						//  newTr.className = "";
+						//  tbody.appendChild(newTr);
+
+						// })
 					} else {
 						alert("接口异常");
 					}
@@ -326,6 +386,10 @@
 					
 			})
 		})
+
+
+		
+
 		// var searchById = function() {
 		// 	 var url = "http://134.175.154.93:6677/product/findProductByName";
 	         
